--- a/RVFS/RVFS/templates/registration/activation_complete.html
+++ b/RVFS/RVFS/templates/registration/activation_complete.html
@@ -1,13 +1,6 @@
 {% extends 'rvfsite/base.html' %}
-
-{% block title %}
-Activation Complete
-{% endblock %}
-
 {% block body %}
 <div class="registration">
-    <div class="placeholder-md"></div>
-    <p class="text-standard">Your account has been registered go have fun!</p>
-    <div class="placeholder-md"></div>
+    <p>Your account has been registered go have fun!</p>
 </div>
 {% endblock %}
