--- a/RVFS/RVFS/templates/rvfsite/404.html
+++ b/RVFS/RVFS/templates/rvfsite/404.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class="jumbotron page-404">
-    <h1 class="text-standard">404 Page Not Found</h1>
+    <h1 class="text-standard">404</h1>
     <p class="text-standard">The page you are looking for is either still in the shop or does not exist!</p>
 </div>
 {% endblock %}
