--- a/RVFS/RVFS/templates/rvfsite/about.html
+++ b/RVFS/RVFS/templates/rvfsite/about.html
@@ -1,73 +1,78 @@
 {% extends 'rvfsite/base.html' %}
 {% load static %}
 {% load thumbnail %}
-{% load mathfilters %}
 
 {% block title %}
 About
 {% endblock %}
 
 {% block body %}
-<h1 class="section-heads text-center">THE FORGE</h1>
+<h1 class="section-heads">About the Shop:</h1>
 <p class="text-standard about-text">
-Ravenmoore Valley Forge & Metalworks is crewed by a team of designers and artisans who will help you bring your creations to life. We offer a variety of metalworking services out of our forge and fabrication shops, including made-to-order custom fabrication, maintenance and repair of metalwork items, removal of scrap metal and materials in addition to a catalog of pre-made metal tools and artwork. Our capabilities as a shop are constantly advancing as we add new tools to our shops and new skills to our repertoire to refine our craft and our wares.
-</p>
-<h1 class="section-heads text-center">THE MARKETPLACE</h1>
-<p class="text-standard about-text">
-RVFM also stands for the other half of who we are; Ravenmoore Valley Forge & Marketplace. Many types of products can be found here made by the members of the shop and fellow artisans alike. Small hobby artists searching for a table or a market to sell their creations or even other artists to collaborate with join us in our ventures.
-</p>
-<h1 class="section-heads text-center">MARKETPLACE HEADER</h1>
-<p class="text-standard about-text">
-In the Marketplace you’ll find the ever-changing inventory including but not limited to; custom blades and wands, chainmail jewelry and sheet-goods, and wire-wrapped stones. Alongside the inventory, we also have our friends and artisans listed below with their information. We hope you enjoy the Marketplace and thank you for visiting.
+Our Burien workshop is crewed by a team of designers and artisans who will help you bring your creations to life. We offer a variety of metalworking services out of our forge and fabrication shops, including made-to-order custom fabrication, maintenance and repair of metalwork items, removal of scrap metal and materials in addition to a catalog of pre-made metal tools and artwork. Our capabilities as a shop are constantly advancing as we add new tools to our shops and new skills to our repertoire to refine our craft and our wares.
+<br />
+<br />
+Here at RVFM we pride ourselves with the fact that most of what leaves our shop has been made of recycled materials. Old railroad ties, filing cabinets, washers and/or dryers, old tire rims; all of this and much more has come into the shop in one form and left in another. Be sure to let us know through the proper channels if you have anything you’re willing to donate and we will get back to you! This can be found through our Services Page.
+<br />
+<br />
+Our crew consists of Muninn and Huginn Ravenmoore, the owner and manager of RVFM respectively, along with Gordon Blaylock out in the shop. When you arrive, you will likely meet with Huginn if Muninn is out in the shop with Gordon to place your order or consult on your design. From there, Muninn and Gordon will work to fabricate your design and have it ready for you to pick up from the shop. You might even meet Isis the shop dog, too!
 </p>
 <p class="text-standard about-text">
 Take a look in the shop Gallery for a glimpse at where the magic happens!
 </p>
 
-<a class="next-link" href="/gallery/around_the_shop/"><h2>Visit the Forge!</h2></a>
+<a class="next-link" href="/gallery/shop_gallery/"><h2>Visit the Forge!</h2></a>
 <img class="dividor" src="{% static 'arrow-divider.png' %}">
+<h1 class="section-heads">Meet The Crew:</h1>
 
-{% for group, members in groups.items %}
-    <h1 class="section-heads section-sub-heads">{{ group }}</h1>
-    {% for member, count in members.items %}
-        {% if member.account.about %}
-            {% if count|mod:2 == 1 %}
-            <div class="row">
-                <div class="col">
-                    <img class="abt-pic d-block mx-auto" src="{{ member.account.pic.url }}">
-                    <h3 class="names">{{ member.account.first_name }} {{ member.account.last_name }}</h3>
-                </div>
+<h2 class="section-heads section-sub-heads">The Office</h2>
 
-                <div class="col abt-text-col">
-                    <p class="text-standard about-text">
-                    {{ member.account.about }}
-                    </p>
-                </div>
-            </div>
-            {% else %}
-            <div class="row">
-                <div class="col abt-text-col">
-                    <p class="text-standard about-text">
-                    {{ member.account.about }}
-                    </p>
-                </div>
-
-                <div class="col">
-                    <img class="abt-pic d-block mx-auto" src="{{ member.account.pic.url }}">
-                    <h3 class="names">{{ member.account.first_name }} {{ member.account.last_name }}</h3>
-                </div>
-            </div>
-            {% endif %}
-        {% endif %}
-    {% endfor %}
-    <img class="dividor" src="{% static 'arrow-divider.png' %}">
-{% endfor %}
-<h1 class="section-heads section-sub-heads">Shop Dog</h1>
 <div class="row">
-    {% if count|mod:2 == 1 %}
+    <div class="col">
+        <img class="abt-pic d-block mx-auto" src="{% if becky.pic %}{{ becky.pic.url }}{% else %}{% static 'becky.jpg' %}{% endif %}">
+        <h3 class="names">Huginn Ravenmoore </h3>
+    </div>
+
+    <div class="col abt-text-col">
+        <p class="text-standard about-text">
+        Huginn serves as an office manager and PR rep for the shop, and is who you will likely be first meeting with when doing business with RVFM. In addition, she is an artist and a designer for the shop, and can help you put your ideas down on paper before the Boys take them out to the forge.  Huginn is among many other things: a performer with fire and steel, a lover of animals, the lovely fiance to Muninn, and an expectant mother; she is looking forward to the future with high anticipation.  Once her family and the forge are in order, Huginn dreams of traveling with Muninn and capturing the sights of the world with him.
+        </p>
+    </div>
+</div>
+<img class="dividor" src="{% static 'arrow-divider.png' %}">
+<h2 class="section-heads section-sub-heads">The Boys in the Shop</h2>
+
+<div class="row">
+    <div class="col">
+        <img class="abt-pic d-block mx-auto" src="{% if matt.pic %}{{ matt.pic.url }}{% else %}{% static 'matt.jpg' %}{% endif %}">
+        <h3 class="names">Muninn Ravenmoore </h3>
+    </div>
+
+    <div class="col abt-text-col">
+        <p class="text-standard about-text">
+        Both the owner and lead designer for the shop Muninn, has 10 years of experience in both craft and design work, along with a firm understanding of the science of metal. As the leader of a fire troupe and the captain of a pirate-LARP  eventing crew, Muninn frequently works out on the field with what he makes in the shop. Muninn discovered both a talent and a passion for metalworking in the course of eventing, admiring the work of others and opting to try his hand at it. While focusing on his family and getting RVFM operational for now, Muninn dreams of traveling and refining his craft under the tutelage of masters from around the world.
+        </p>
+    </div>
+</div>
+<img class="dividor" src="{% static 'arrow-divider.png' %}">
+<div class="row">
+    <div class="col">
+        <img class="abt-pic d-block mx-auto" src="{% if gordon.pic %}{{ gordon.pic.url }}{% else %}{% static 'gordon.jpg' %}{% endif %}">
+        <h3 class="names">Gordon Blaylock </h3>
+    </div>
+
+    <div class="col abt-text-col">
+        <p class="text-standard about-text">
+        Gordon is our shop apprentice from Salem, Oregon, and is the youngest member of our crew at 17. Gordon is working on finishing his GED and moving on to getting an education in metalworking and mechanics. He has a passion for old trucks and cars, from which he has developed an acute attention to detail that serves him well in the shops. He is a member of Muninn’s LARP and fire crews as well, and met Muninn in the eventing world before becoming his apprentice.
+        </p>
+    </div>
+</div>
+<img class="dividor" src="{% static 'arrow-divider.png' %}">
+<div class="row">
     <div class="col">
         <img class="abt-pic d-block mx-auto" src="{% static 'isis.jpg' %}">
         <h3 class="names">Isis</h3>
+        <h4 class="names">(shop Dog)</h4>
     </div>
 
     <div class="col abt-text-col">
@@ -75,18 +80,6 @@ Take a look in the shop Gallery for a glimpse at where the magic happens!
         Our dutiful shop pup, Isis (named for the ancient Egyptian goddess of magic and wisdom) is an excitable but laid-back girl who would be delighted to meet you! She is very attentive to the needs of the crew in determining when they need to take breaks, often by dropping tennis balls at their feet and staring expectantly.
         </p>
     </div>
-    {% else %}
-    <div class="col abt-text-col">
-        <p class="text-standard about-text">
-        Our dutiful shop pup, Isis (named for the ancient Egyptian goddess of magic and wisdom) is an excitable but laid-back girl who would be delighted to meet you! She is very attentive to the needs of the crew in determining when they need to take breaks, often by dropping tennis balls at their feet and staring expectantly.
-        </p>
-    </div>
-
-    <div class="col">
-        <img class="abt-pic d-block mx-auto" src="{% static 'isis.jpg' %}">
-        <h3 class="names">Isis</h3>
-    </div>
-    {% endif %}
 </div>
 
 {% endblock %}
