--- a/RVFS/RVFS/templates/rvfsite/base.html
+++ b/RVFS/RVFS/templates/rvfsite/base.html
@@ -6,7 +6,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <title>{% block title %}{% endblock %}</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine:bold|Cinzel+Decorative|Cardo">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine:bold|Niconne|Cardo">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" crossorigin="anonymous">
   <link rel="stylesheet" href="{% static 'css/app.css' %}">
@@ -20,7 +20,7 @@
       <div class="col-10 content-back">
         <nav class="navbar navbar-expand-md navbar-light">
           <div class="row header header-small">
-            <div class="col-md-auto banner-text">
+            <div id="firstandpike" class="col-md-auto banner-text">
               <div class="row">
                 <div class="col">
                   <img class="banner-img" src="{% static 'RVFM logo.png' %}">
@@ -39,24 +39,15 @@
               </div>
             </div>
             <div class="col">
-              {% if nbar != 'newsletter' and nbar != 'appointment' %}
-              {% if user.is_staff %}
-              <ul class="nav navbar-nav justify-content-end">
-                <li class="nav-item text-standard {% if nbar == 'add_prod' %}active{% endif %}"><a class="nav-link staff-nav" href="{% url 'add_prod' %}">Add Product</a></li>
-                <li class="nav-item text-standard {% if nbar == 'add_serv' %}active{% endif %}"><a class="nav-link staff-nav" href="{% url 'add_serv' %}">Add Service</a></li>
-                <li class="nav-item text-standard"><a class="nav-link staff-nav" href="{% url 'update-slides' %}">Update Slides</a></li>
-                <li id="mailing-parent" class="nav-item text-standard"><a id="mailing" class="nav-link staff-nav" href="#">Update Mailing List</a></li>
-                <li class="nav-item text-standard {% if nbar == 'discount' %}active{% endif %}"><a class="nav-link staff-nav" href="{% url 'discounts' %}">Manage Discounts</a></li>
-              </ul>
-              {% else %}
               <ul class="info banner-text">
                 <li>
-                  <p class="text-standard">Creations@ravenvfm.com</p>
+                  <p class="text-standard">m.ravenmoore@gmail.com</p>
                 </li>
                 <li>
                   <p class="text-standard">
                   (206)-372-6501
                   </p>
+                  <br>
                 </li>
                 <li>
                   <a href="https://www.facebook.com/RavenVFM/"><img class="nav-social" src="{% static 'Facebook.png' %}"></a>
@@ -70,15 +61,6 @@
                 <li>
                   <a href="https://www.instagram.com/m.ravenmoore/"><img class="nav-social" src="{% static 'insta.png' %}"></a>
                 </li>
-                <li>
-                  {% if not user.is_authenticated %}
-                  <form id="newsletter">
-                    <input class="newsletter" type="text" name="newsletter" placeholder="Newsletter">
-                    <input class="btn btn-secondary" type="submit" value="Sign up!">
-                  </form>
-                  {% endif %}
-                </li>
-              {% endif %}
               </ul>
             </div>
           <div class="w-100 menus">
@@ -105,17 +87,17 @@
                 <li class="nav-item text-standard {% if nbar == 'prods' %}active{% endif %}"><a class="nav-link" href="{% url 'prods' %}">Products</a></li>
                 <li class="nav-item text-standard {% if nbar == 'servs' %}active{% endif %}"><a class="nav-link" href="{% url 'servs' %}">Services</a></li>
                 <li class="nav-item text-standard dropdown {% if nbar == 'gallery' %}active{% endif %}">
-                  <a class="nav-link dropdown-toggle {% if nbar == 'galleries' %}active{% endif %}" id="dropdown" aria-haspopup="true" aria-expanded="false"  href="{% url 'galleries' %}" role="button">Galleries</a>
+                  <a class="nav-link dropdown-toggle" id="dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-target="#nav-drop" aria-controls="#nav-drop" href="#" role="button">Galleries</a>
                   <div class="dropdown-menu" aria-labelledby="dropdown">
                   {% for gallery in galleries %}
                     {% if tab %}
                       {% if tab == gallery.name %}
-                        <a class="dropdown-item text-standard dropdown active" href="{% url 'gallery' slug=gallery.url %}">{{ gallery.name }}</a>
+                        <a class="dropdown-item text-standard active" href="{% url 'gallery' slug=gallery.url %}">{{ gallery.name }}</a>
                       {% else %}
-                        <a class="dropdown-item dropdown text-standard" href="{% url 'gallery' slug=gallery.url %}">{{ gallery.name }}</a>
+                      <a class="dropdown-item text-standard" href="{% url 'gallery' slug=gallery.url %}">{{ gallery.name }}</a>
                       {% endif %}
                     {% else %}
-                    <a class="dropdown-item dropdown text-standard" href="{% url 'gallery' slug=gallery.url %}">{{ gallery.name }}</a>
+                    <a class="dropdown-item text-standard" href="{% url 'gallery' slug=gallery.url %}">{{ gallery.name }}</a>
                     {% endif %}
                   {% endfor %}
                   </div>
@@ -141,11 +123,12 @@
             <div class="w-100">
               <div id="collapse-right" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav ml-auto">
-                  <li class="nav-item text-standard"><a class="nav-link" href="{% url 'newsletter-mobile' %}">Newsletter</a></li>
-                  <li class="nav-item text-standard"><a class="nav-link" href="{% url 'appointment-mobile' %}">Appointments</a></li>
+                  <li class="nav-item text-standard {% if nbar == 'add_prod' %}active{% endif %}"><a class="nav-link" href="{% url 'add_prod' %}">Add Product</a></li>
+                  <li class="nav-item text-standard {% if nbar == 'add_serv' %}active{% endif %}"><a class="nav-link" href="{% url 'add_serv' %}">Add Service</a></li>
                   <li class="nav-item text-standard {% if nbar == 'list' %}active{% endif %}"><a class="nav-link" href="{% url 'list' %}">Items</a></li>
                   <li class="nav-item text-standard {% if nbar == 'order' %}active{% endif %}"><a class="nav-link" href="{% url 'orders' %}">Orders</a></li>
                   <li class="nav-item text-standard {% if nbar == 'users' %}active{% endif %}"><a class="nav-link" href="{% url 'users' %}">Users</a></li>
+                  <li class="nav-item text-standard"><a class="nav-link" href="{% url 'update' %}">Update Slides</a></li>
                 {% if user.is_superuser %}
                   <li class="nav-item text-standard"><a class="nav-link" href="{% url 'admin:login' %}">Admin</a></li>
                 {% endif %}
@@ -153,7 +136,6 @@
               </div>
             </div>
             {% endif %}
-          {% endif %}
           </div>
         </nav>
         <img class="dividor" src="{% static 'arrow-divider.png' %}">
@@ -168,11 +150,15 @@
               <h6 class="text-standard">Burien, WA 98146</h6>
               <h6 class="text-standard">United States</h6>
             </div>
-            <div class="col text-right">
+            <div class="col">
               <h5 class="text-standard">Contact</h5>
               <hr class="footer-break">
-              <h6 class="text-standard">Creations@ravenvfm.com</h6>
+              <h6 class="text-standard">m.ravenmoore@gmail.com</h6>
               <h6 class="text-standard">(206)-372-6501</h6>
+            </div>
+            <div class="col">
+              <h5 class="text-standard">Follow</h5>
+              <hr class="footer-break">
               <ul class="links">
                 <li>
                   <a href="https://www.facebook.com/RavenVFM/"><img class="nav-social" src="{% static 'Facebook.png' %}"></a>
@@ -202,29 +188,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
   <script src="{% static 'js/dates.js' %}"></script>
+  <script src="https://www.paypalobjects.com/api/checkout.js"></script>
   <script src="{% static 'js/add_swap.js' %}"></script>
-  <script type="text/javascript">
-$('#newsletter').submit(function (event) {
-  event.preventDefault();
-  var email = event.target[0].value;
-  $.get('/newsletter/', {email: email},
-    function(data) {
-      $('#newsletter').html(data);
-      if (event.currentTarget.attributes[1].value === "text-center") {
-        setTimeout(location.reload.bind(location), 6000);
-      }
-    }
-  );
-});
-$('#mailing').click(function (event) {
-  event.preventDefault();
-  $.get('/update-mailing/',
-    function(data) {
-      $('#mailing-parent').html(data);
-    }
-  );
-});
-</script>
   {% block js %}
   {% endblock %}
 </body>
