--- a/RVFS/RVFS/templates/rvfsite/home.html
+++ b/RVFS/RVFS/templates/rvfsite/home.html
@@ -35,7 +35,7 @@ Home
     <span class="carousel-control-prev-icon"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <div class="btn carousel-caption carousel-link"><a class="next-link" href="{% url 'about' %}"><h2 class="slide-link">Meet the Crew!</h2></a></div>
+  <div class="btn carousel-caption carousel-link"><a class="next-link" href="{% url 'about' %}"><h2>Meet the Crew!</h2></a></div>
   <a class="carousel-control-next" href="#myCarousel" data-slide="next">
     <span class="carousel-control-next-icon"></span>
     <span class="sr-only">Next</span>
