--- a/RVFS/account/templates/contact.html
+++ b/RVFS/account/templates/contact.html
@@ -7,27 +7,23 @@
     <div class="row">
         <div class="col">
             <h1 class="text-standard">Contact</h1>
-            <h4 class="text-standard">Your name:</h4>
-            <input type="text" name="subject">
-            <h4 class="text-standard">Your email:</h4>
-            <input type="text" name="from_email">
-            <h4 class="text-standard">What can we help you with?</h4>
-            <textarea class="form-control" type="text" name="message"></textarea>
+            {% for field in form %}
+            <h4 class="text-standard">{{ field.label }}</h4>
+            <p class="text-standard">{{ field }}</p>
+            {% endfor %}
             <button class="btn btn-secondary text-standard" type="submit">Submit</button>
-            <p class="text-standard">If you have any questions, concerns, or complaints you can send them to us to be addressed here! We will get back to you at the next available chance during office hours. We love to hear back from our clients and hope to hear from you again if current commissions have been finished.</p>
         </div>
         <div class="col">
+            <p class="text-standard">If you have any questions, concerns, or complaints you can send them to us to be addressed here! We will get back to you at the next available chance during office hours. We love to hear back from our clients and hope to hear from you again if current commissions have been finished.</p>
             <iframe
-              class="iframe-map"
+              width="400"
+              height="300"
               frameborder="0" style="border:0"
               src="https://www.google.com/maps/embed/v1/place?key={{ api }}
                 &q=11639+13th+Ave+SW,Burien+WA">
             </iframe>
             <h4 class="text-standard">Shop Hours:</h4>
             <p class="text-standard">Tues.-Sat. 10AM-8PM</p>
-            <h4 class="text-standard">Emails:</h4>
-            <p class="text-standard p-emails">Muninn: <a href="mailto:Muninn@ravenvfm.com">Muninn@ravenvfm.com</a></p>
-            <p class="text-standard p-emails">Huginn: <a href="mailto:huginn@ravenvfm.com">huginn@ravenvfm.com</a></p>
         </div>
     </div>
 </form>
